--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-simple-keyboard": "^3.8.130"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
